#48 расширение api описания кампании
